homepage mobile completed

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,6 @@
 <body>
     <header class="headings">
 
-        
-
         <b class="name">Genuel Zapanta</b>
 
         <nav class="topnav"> 
@@ -37,8 +35,9 @@
         
     </header>
 
-    <main class = "middle">
-        <h1>Hello! I'm a Full Stack Developer</h1>
+    <main>
+
+        <h1 class="hello">Hello! I'm a Full Stack Developer</h1>
 
         <div class="spacer_1"></div>
 
