continue small changes to css homepage

--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
                 </figure>
             </div>
 
-            <form action = "about.html">
+            <form action = "about.html" class = "more_tech">
                 <button type = "submit">More Information</button>
             </form>
 
