Completed about page

--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,8 @@
         <nav  class="topnav">
             <a href = "about.html">Home</a>
             <a href = "about.html">About</a>            
-            <a href = "about.html">Portfolio</a>
-            <a href = "about.html">Contact</a>
+            <a href = "portfolio.html">Portfolio</a>
+            <a href = "contact.html">Contact</a>
 
         </nav>
         
@@ -81,7 +81,7 @@
                 </figure>
             </div>
 
-            <form action = "about.html" class = "more_tech">
+            <form action = "portfolio.html" class = "more_tech">
                 <button type = "submit">More Information</button>
             </form>
 
