completed css for all

--- a/src/contact.html
+++ b/src/contact.html
@@ -34,7 +34,7 @@
                 <div class = "info_column">
 
                     <h2>Get In Touch</h2>
-                    <p>Have a question or looking to get in touch? Shoot me an email, or message trhough my socials or the form on the right.</p>
+                    <p>Have a question or looking to get in touch? Send me a message using my socials or an email using the form.</p>
                 
 
                     <a href="https://www.linkedin.com/in/genuel-mark-zapanta-6a3411140">LinkedIn</a> | <a href="https://github.com/rulerrobin">GitHub</a>
