added mail to footer

--- a/src/about.html
+++ b/src/about.html
@@ -30,7 +30,7 @@
         <h1 class = "page_topper">About</h1> 
         <div class="spacer_2"></div>
 
-        <p class = "about_desc">You may download my CV using the button below or take a quick look at some skills I have on this page.</p>
+        <p class = "about_desc">You may download my CV using the button below or take a quick look at some skills I have on this page. Hover the icons more information</p>
 
         <form action = "about.html">
             <button id = "cv" type = "submit">
