--- a/src/index.html
+++ b/src/index.html
@@ -89,6 +89,10 @@
 
     <footer id="end">
         <p>© 2023 Genuel Zapanta</p>
+        <a href="mailto:zapanta.genuel@gmail.com">
+            <img class = "mail" src = "logos/mail.png">
+        </a>
+        
     </footer>
 
 </body>
