added mail to all footers

--- a/src/contact.html
+++ b/src/contact.html
@@ -65,8 +65,10 @@
 
     <footer id="end">
         <p>© 2023 Genuel Zapanta</p>
+        <a href="mailto:zapanta.genuel@gmail.com">
+            <img class = "mail" src = "logos/mail.png">
+        </a>
+        
     </footer>
-
-
 </body>
 </html>
