--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -150,8 +150,11 @@
 
     <footer id="end">
         <p>© 2023 Genuel Zapanta</p>
+        <a href="mailto:zapanta.genuel@gmail.com">
+            <img class = "mail" src = "logos/mail.png">
+        </a>
+        
     </footer>
-
     
 </body>
 </html>
