--- a/src/about.html
+++ b/src/about.html
@@ -241,7 +241,10 @@
     
     <footer id="end">
         <p>© 2023 Genuel Zapanta</p>
+        <a href="mailto:zapanta.genuel@gmail.com">
+            <img class = "mail" src = "logos/mail.png">
+        </a>
+        
     </footer>
-
 </body>
 </html>
