added alt text for mail icon images

--- a/src/about.html
+++ b/src/about.html
@@ -242,7 +242,7 @@
     <footer id="end">
         <p>© 2023 Genuel Zapanta</p>
         <a href="mailto:zapanta.genuel@gmail.com">
-            <img class = "mail" src = "logos/mail.png">
+            <img class = "mail" src = "logos/mail.png" alt = "mail icon">
         </a>
         
     </footer>
