--- a/src/contact.html
+++ b/src/contact.html
@@ -36,7 +36,7 @@
                     <h2>Get In Touch</h2>
                     <p>Have a question or looking to get in touch? Send me a message using my socials or an email using the form.</p>
                 
-                    <img class = "dm" src="/logos/mail.png">
+                    <img class = "dm" src="/logos/mail.png" alt = "mail icon">
                     <a href="https://www.linkedin.com/in/genuel-mark-zapanta-6a3411140">LinkedIn</a> | <a href="https://github.com/rulerrobin">GitHub</a>
 
                 </div>
@@ -66,7 +66,7 @@
     <footer id="end">
         <p>© 2023 Genuel Zapanta</p>
         <a href="mailto:zapanta.genuel@gmail.com">
-            <img class = "mail" src = "logos/mail.png">
+            <img class = "mail" src = "logos/mail.png" alt = "mail icon">
         </a>
         
     </footer>
